# LogTableGame.fennarin.github.io

./: makefile  meson.build
data/: gresource.xml
src/: main.vala  meson.build
